<resources>
    <string name="app_name">Informasi Masjid</string>
    <string name="skip">Skip</string>
    <string name="Simpan">Simpan</string>
    <string name="keterangan">Keterangan</string>
    <string name="informasikeuangan"><![CDATA[Pemasukan & Pengeluaran Keuangan]]></string>
    <string name="informasitpa">Informasi Mengenai TPA</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="jadwal">Jadwal Pendaftaran</string>
    <string name="jadwalpenutupan">Jadwal Penutupan</string>
    <string name="jadwalpendaftaran">Jadwal Pendaftaran</string>
    <string name="linkpendaftaran">Link Pendaftaran</string>
    <string name="kategori">Kategori</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="hari">Hari</string>
    <string name="time">Time</string>
    <string name="Edit">Edit</string>
    <string name="update">Update</string>
    <string name="contact">No. Contact</string>
    <string name="share">Share</string>
    <string name="Tambah">Tambah</string>
    <string name="linkkeuangan">Rekap Keuangan</string>

    <string-array name="day_arrays">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Ahad</item>
    </string-array>
    <string name="title_activity_coba">Coba</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>