<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".halaman.informasi_tpa.TpaActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/tpa"
            android:id="@+id/header"/>

        <TextView
            android:id="@+id/saldosekarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:text="TPA"
            android:textStyle="bold"
            android:textSize="25sp" />

        <FrameLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btnbacktoHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_back"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/promosikeuangan"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/informasitpa"
            />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengumuman" />
        <TextView
            android:id="@+id/pengumumantpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengumuman" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwalpendaftaran" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/jadwalpendaftaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwalpendaftaran" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwalpenutupan" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/jadwalpenutupan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwalpenutupan" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkpendaftaran" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/linkpendaftaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwalpenutupan" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>