<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".halaman.keuangan.FormKeuangan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btnbacktoHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_back"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Form Keuangan"
                    android:textStyle="bold"
                    android:textAlignment="center" />

                <View
                    android:layout_width="match_parent"
                    android:visibility="visible"
                    android:layout_height="2dp"
                    android:layout_margin="3dp"
                    android:background="#62DD4C"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/kategori"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        />
                    <RadioGroup
                        android:id="@+id/kategori"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/pemasukan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pemasukan"
                            android:checked="true"/>
                        <RadioButton
                            android:id="@+id/pengeluaran"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pengeluaran"/>
                    </RadioGroup>
                <TextView
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:text="Sumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_margin="6dp"
                    android:id="@+id/keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tulis Sumber Uang" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_margin="6dp"
                        android:id="@+id/jumlahuang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Jumlah Nominal" />

                    <EditText
                        android:id="@+id/tanggal"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:hint="Tanggal" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnsave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Simpan"
                    android:layout_margin="6dp" />


                <ProgressBar
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/signup_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>